Fixed word wrap

--- a/assets/style.css
+++ b/assets/style.css
@@ -73,6 +73,7 @@ html {
 .content-block {
   max-width: 700px;
   margin: 0px auto;
+  word-wrap: break-word;
 }
 body {
   line-height: 2.5em;
